# ocaml-subprocess

./: .gitmodules  README.md  dune-project  subprocess.opam
_build/default/_doc/_html/subprocess/Subprocess/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Cmd/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Cmd/In/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Cmd/Mono/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Context/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Core/Cmd/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Core/In/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Exec/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Exit/: index.html
_build/default/_doc/_html/subprocess/Subprocess/In/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Or_error/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Results/: index.html
_build/default/_doc/_html/subprocess/Subprocess/Run/: index.html
doc/: dune  index.mld
doc/subprocess/: index.html
doc/subprocess/Subprocess/: index.html
doc/subprocess/Subprocess/Core/: index.html
doc/subprocess/Subprocess/Core/Exit/: index.html
doc/subprocess/Subprocess/Unchecked/: index.html
docs/: index.html
docs/subprocess/: index.html
docs/subprocess/Subprocess/: index.html
docs/subprocess/Subprocess/Core/: index.html
docs/subprocess/Subprocess/Core/Cmd/: index.html
docs/subprocess/Subprocess/Core/Cmd/In/: index.html
docs/subprocess/Subprocess/Core/Exit/: index.html
docs/subprocess/Subprocess/Exec/: index.html
docs/subprocess/Subprocess/Managed_in/: index.html
docs/subprocess/Subprocess/Results/: index.html
docs/subprocess/Subprocess/StringResults/: index.html
docs/subprocess/Subprocess/Unchecked/: index.html
lib/: args.ml  args.mli  bind.ml  bind.mli  cmd.ml  cmd.mli  core.ml  core.mli  dune  exec.ml  exec.mli  exit.ml  exit.mli  fold.ml  functor.ml  io.ml  managed_in.ml  managed_in.mli  managed_pipe.ml  repr.ml  run.ml  run.mli  sexp.ml  stream.ml  stream.mli  stream2.ml  sub2.ml  sub2.mli  subprocess.ml  subprocess.mli
test/: dune  test.ml
(+9 files in other folders)
